Fixed: wflow-consoleweb - Universal Theme - Popup dialogs occasionally displays 2 scrollbars @6.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/universal/css/style.css
+++ b/wflow-consoleweb/src/main/webapp/universal/css/style.css
@@ -24,6 +24,10 @@ body:not(.embeded) {
     height: 100%;
 }
 
+body.popupBody:not(.embeded) {
+    overflow-y: hidden;
+}
+
 .inline-block {
     display: inline-block;
     vertical-align: top;
